# doccheck

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_seed_admin.py  0002_create_projects.py  0003_files.py  0004_parser_pipeline.py  0005_detect_framework.py  0006_add_document_sheets.py  0007_add_document_metadata_template.py  0008_report_export.py  0009_system_config.py  0010_llm_config_default.py  0011_price_rule_sheets_config.py  0012_add_template_cluster_fields.py  0013_sheet_role_in_sheets_config.py  0014_add_tender_document_table.py  0015_add_segment_hash_and_boq_baseline_hash.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  analysis.py  audit.py  auth.py  bidders.py  compare.py  documents.py  exports.py  parse_progress.py  price.py  price_items.py  projects.py  reports.py  reviews.py  sse_demo.py  tender.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_task.py  analysis_report.py  async_task.py  audit_log.py  bid_document.py  bidder.py  document_image.py  document_metadata.py  document_sheet.py  document_text.py  export_job.py  export_template.py  overall_analysis.py  pair_comparison.py  price_config.py  price_item.py  price_parsing_rule.py  project.py  system_config.py  tender_document.py  user.py
backend/app/schemas/: admin.py  agent_task.py  analysis.py  auth.py  bid_document.py  bidder.py  compare.py  parse_progress.py  price.py  price_item.py  project.py  report.py  tender.py
backend/app/services/: audit.py
backend/app/services/admin/: llm_reader.py  rules_defaults.py  rules_mapper.py  rules_reader.py
backend/scripts/: backfill_document_metadata_template.py  backfill_document_sheets.py  build_default_export_template.py  reset_admin_for_e2e.py
backend/tests/: conftest.py
backend/tests/e2e/: _c4_helpers.py  conftest.py  test_admin_e2e.py  test_admin_llm.py  test_alembic_upgrade.py  test_analysis_indeterminate.py  test_analysis_sse_api.py  test_analysis_start_api.py  test_analysis_status_api.py  test_analysis_status_report_ready.py  test_async_tasks_scanner_e2e.py  test_auth_change_password.py  test_auth_lockout.py  test_auth_login.py  test_auth_seed.py  test_auth_token.py  test_bidders_api.py  test_compare_api.py  test_decrypt_api.py  test_detect_agents_dummy.py  test_detect_engine_orchestration.py  test_detect_error_consistency_agent.py  test_detect_image_reuse_agent.py  test_detect_metadata_agents.py  test_detect_price_anomaly_agent.py  test_detect_price_consistency_agent.py  test_detect_section_similarity.py  test_detect_structure_similarity.py  test_detect_style_agent.py  test_detect_subprocess_isolation.py  test_detect_text_similarity.py  test_detect_text_similarity_exact_match.py  test_dimension_review_all_dims.py  test_documents_api.py  test_export_word_indeterminate.py  test_exports_api.py  test_extract_api.py  test_extract_mac_packed_zip.py  test_health.py  test_judge_baseline_injection_e2e.py  (+28 more)
backend/tests/fixtures/: __init__.py  archive_fixtures.py  auth_fixtures.py  doc_fixtures.py  llm_mock.py  zip_bytes.py
backend/tests/unit/: test_admin_rules.py  test_admin_users.py  test_agent_except_skipped_guard.py  test_agent_subprocess_isolation.py  test_aggregate_bidder_totals_excluded_param.py  test_alembic_0007.py  test_alembic_0008.py  test_alembic_preserves_app_loggers.py  test_async_tasks_scanner.py  test_async_tasks_tracker.py  test_audit_service.py  test_auth_jwt.py  test_auth_lockout.py  test_auth_password.py  test_auth_query_param.py  test_auth_schema.py  test_backfill_document_metadata_template.py  test_backfill_document_sheets.py  test_baseline_resolver_l1.py  test_baseline_resolver_l2.py  test_baseline_resolver_l3.py  test_bidder_identity_info_status.py  test_bidder_schema.py  test_boq_baseline_hash.py  test_compare_metadata.py  test_compare_price.py  test_compare_text.py  test_compute_dims_with_adjustments.py  test_detect_engine.py  test_detect_judge.py  test_detect_preflight.py  test_detect_registry.py  test_document_sheet_model.py  test_docx_textbox_extract.py  test_encoding_utf8_detection.py  test_engine_agent_skipped_error.py  test_engine_utf8_no_flag.py  test_error_consistency_config.py  test_error_consistency_intersect_searcher.py  test_error_consistency_keyword_extractor.py  (+107 more)
e2e/: seed.ts  (+1 more)
(+548 files in other folders)
