[project]
name = "documentcheck"
version = "0.1.0"
description = "围标检测系统 - 投标文件分析与围标串标行为检测"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Document parsing
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # Text analysis
    "jieba>=0.42",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    # Utils
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
